# django-session-token-auth-demo

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  manage.py  pyproject.toml
frontend/: index.js  package-lock.json  package.json  react-example.jsx  snowpack.config.js  tailwind.config.js
frontend/controllers/: toggle_controller.js
session_token_auth_demo/: asgi.py  settings.py  urls.py  wsgi.py
wishlist/: mixins.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
wishlist/templates/wishlist/: base.html  index.html  splashpage.html
